seaqt/QtCore/gen_qcborvalue.h

typedef struct QCborArray QCborArray;
typedef struct QCborMap QCborMap;
typedef struct QCborStreamWriter QCborStreamWriter;
typedef struct QCborValue QCborValue;
typedef struct QCborValueConstRef QCborValueConstRef;
typedef struct QCborValueRef QCborValueRef;
typedef struct QDateTime QDateTime;
typedef struct QJsonValue QJsonValue;
typedef struct QRegularExpression QRegularExpression;
typedef struct QUrl QUrl;
typedef struct QUuid QUuid;
typedef struct QVariant QVariant;
QCborValueConstRef* QCborValueConstRef_new(QCborValueConstRef* from);
bool QCborValueConstRef_isBool(const QCborValueConstRef* self);
bool QCborValueConstRef_isNull(const QCborValueConstRef* self);
bool QCborValueConstRef_isUndefined(const QCborValueConstRef* self);
bool QCborValueConstRef_isDouble(const QCborValueConstRef* self);
bool QCborValueConstRef_isDateTime(const QCborValueConstRef* self);
bool QCborValueConstRef_isUrl(const QCborValueConstRef* self);
bool QCborValueConstRef_isRegularExpression(const QCborValueConstRef* self);
bool QCborValueConstRef_isUuid(const QCborValueConstRef* self);
bool QCborValueConstRef_isInvalid(const QCborValueConstRef* self);
bool QCborValueConstRef_isContainer(const QCborValueConstRef* self);
bool QCborValueConstRef_isSimpleType(const QCborValueConstRef* self);
bool QCborValueConstRef_isSimpleType_st(const QCborValueConstRef* self, uint8_t st);
uint8_t QCborValueConstRef_toSimpleType(const QCborValueConstRef* self);
uint64_t QCborValueConstRef_tag(const QCborValueConstRef* self);
QCborValue* QCborValueConstRef_taggedValue(const QCborValueConstRef* self);
long long QCborValueConstRef_toInteger(const QCborValueConstRef* self);
bool QCborValueConstRef_toBool(const QCborValueConstRef* self);
double QCborValueConstRef_toDouble(const QCborValueConstRef* self);
struct seaqt_string QCborValueConstRef_toByteArray(const QCborValueConstRef* self);
struct seaqt_string QCborValueConstRef_toString(const QCborValueConstRef* self);
QDateTime* QCborValueConstRef_toDateTime(const QCborValueConstRef* self);
QUrl* QCborValueConstRef_toUrl(const QCborValueConstRef* self);
QRegularExpression* QCborValueConstRef_toRegularExpression(const QCborValueConstRef* self);
QUuid* QCborValueConstRef_toUuid(const QCborValueConstRef* self);
QCborArray* QCborValueConstRef_toArray(const QCborValueConstRef* self);
QCborArray* QCborValueConstRef_toArray_a(const QCborValueConstRef* self, QCborArray* a);
QCborMap* QCborValueConstRef_toMap(const QCborValueConstRef* self);
QCborMap* QCborValueConstRef_toMap_m(const QCborValueConstRef* self, QCborMap* m);
QCborValue* QCborValueConstRef_operatorSubscript_QString(const QCborValueConstRef* self, struct seaqt_string key);
QCborValue* QCborValueConstRef_operatorSubscript_qint64(const QCborValueConstRef* self, long long key);
int QCborValueConstRef_compare(const QCborValueConstRef* self, QCborValue* other);
bool QCborValueConstRef_operatorEqual(const QCborValueConstRef* self, QCborValue* other);
bool QCborValueConstRef_operatorNotEqual(const QCborValueConstRef* self, QCborValue* other);
bool QCborValueConstRef_operatorLesser(const QCborValueConstRef* self, QCborValue* other);
QVariant* QCborValueConstRef_toVariant(const QCborValueConstRef* self);
QJsonValue* QCborValueConstRef_toJsonValue(const QCborValueConstRef* self);
struct seaqt_string QCborValueConstRef_toCbor(const QCborValueConstRef* self);
void QCborValueConstRef_toCbor_writer(const QCborValueConstRef* self, QCborStreamWriter* writer);
struct seaqt_string QCborValueConstRef_toDiagnosticNotation(const QCborValueConstRef* self);
uint8_t QCborValueConstRef_toSimpleType_defaultValue(const QCborValueConstRef* self, uint8_t defaultValue);
uint64_t QCborValueConstRef_tag_defaultValue(const QCborValueConstRef* self, uint64_t defaultValue);
QCborValue* QCborValueConstRef_taggedValue_defaultValue(const QCborValueConstRef* self, QCborValue* defaultValue);
long long QCborValueConstRef_toInteger_defaultValue(const QCborValueConstRef* self, long long defaultValue);
bool QCborValueConstRef_toBool_defaultValue(const QCborValueConstRef* self, bool defaultValue);
double QCborValueConstRef_toDouble_defaultValue(const QCborValueConstRef* self, double defaultValue);
struct seaqt_string QCborValueConstRef_toByteArray_defaultValue(const QCborValueConstRef* self, struct seaqt_string defaultValue);
struct seaqt_string QCborValueConstRef_toString_defaultValue(const QCborValueConstRef* self, struct seaqt_string defaultValue);
QDateTime* QCborValueConstRef_toDateTime_defaultValue(const QCborValueConstRef* self, QDateTime* defaultValue);
QUrl* QCborValueConstRef_toUrl_defaultValue(const QCborValueConstRef* self, QUrl* defaultValue);
QRegularExpression* QCborValueConstRef_toRegularExpression_defaultValue(const QCborValueConstRef* self, QRegularExpression* defaultValue);
QUuid* QCborValueConstRef_toUuid_defaultValue(const QCborValueConstRef* self, QUuid* defaultValue);
struct seaqt_string QCborValueConstRef_toCbor_opt(const QCborValueConstRef* self, int opt);
void QCborValueConstRef_toCbor_writer_opt(const QCborValueConstRef* self, QCborStreamWriter* writer, int opt);
struct seaqt_string QCborValueConstRef_toDiagnosticNotation_opt(const QCborValueConstRef* self, int opt);
void QCborValueRef_operatorAssign_other(QCborValueRef* self, QCborValue* other);
void QCborValueRef_operatorAssign_from(QCborValueRef* self, QCborValueRef* from);
QCborValueRef* QCborValueRef_operatorSubscript_qint64(QCborValueRef* self, long long key);
QCborValueRef* QCborValueRef_operatorSubscript_cQString(QCborValueRef* self, struct seaqt_string key);
QCborValue* QCborValueRef_ToQCborValue(const QCborValueRef* self);
int QCborValueRef_type(const QCborValueRef* self);
bool QCborValueRef_isInteger(const QCborValueRef* self);
bool QCborValueRef_isByteArray(const QCborValueRef* self);
bool QCborValueRef_isString(const QCborValueRef* self);
bool QCborValueRef_isArray(const QCborValueRef* self);
bool QCborValueRef_isMap(const QCborValueRef* self);
bool QCborValueRef_isTag(const QCborValueRef* self);
bool QCborValueRef_isFalse(const QCborValueRef* self);
bool QCborValueRef_isTrue(const QCborValueRef* self);
bool QCborValueRef_isBool(const QCborValueRef* self);
bool QCborValueRef_isNull(const QCborValueRef* self);
bool QCborValueRef_isUndefined(const QCborValueRef* self);
bool QCborValueRef_isDouble(const QCborValueRef* self);
bool QCborValueRef_isDateTime(const QCborValueRef* self);
bool QCborValueRef_isUrl(const QCborValueRef* self);
bool QCborValueRef_isRegularExpression(const QCborValueRef* self);
bool QCborValueRef_isUuid(const QCborValueRef* self);
bool QCborValueRef_isInvalid(const QCborValueRef* self);
bool QCborValueRef_isContainer(const QCborValueRef* self);
bool QCborValueRef_isSimpleType(const QCborValueRef* self);
bool QCborValueRef_isSimpleType_st(const QCborValueRef* self, uint8_t st);
uint8_t QCborValueRef_toSimpleType(const QCborValueRef* self);
uint64_t QCborValueRef_tag(const QCborValueRef* self);
QCborValue* QCborValueRef_taggedValue(const QCborValueRef* self);
long long QCborValueRef_toInteger(const QCborValueRef* self);
bool QCborValueRef_toBool(const QCborValueRef* self);
double QCborValueRef_toDouble(const QCborValueRef* self);
struct seaqt_string QCborValueRef_toByteArray(const QCborValueRef* self);
struct seaqt_string QCborValueRef_toString(const QCborValueRef* self);
QDateTime* QCborValueRef_toDateTime(const QCborValueRef* self);
QUrl* QCborValueRef_toUrl(const QCborValueRef* self);
QRegularExpression* QCborValueRef_toRegularExpression(const QCborValueRef* self);
QUuid* QCborValueRef_toUuid(const QCborValueRef* self);
QCborArray* QCborValueRef_toArray(const QCborValueRef* self);
QCborArray* QCborValueRef_toArray_a(const QCborValueRef* self, QCborArray* a);
QCborMap* QCborValueRef_toMap(const QCborValueRef* self);
QCborMap* QCborValueRef_toMap_m(const QCborValueRef* self, QCborMap* m);
QCborValue* QCborValueRef_operatorSubscript_const_cQString(const QCborValueRef* self, struct seaqt_string key);
QCborValue* QCborValueRef_operatorSubscript_const_qint64(const QCborValueRef* self, long long key);
int QCborValueRef_compare(const QCborValueRef* self, QCborValue* other);
bool QCborValueRef_operatorEqual(const QCborValueRef* self, QCborValue* other);
bool QCborValueRef_operatorNotEqual(const QCborValueRef* self, QCborValue* other);
bool QCborValueRef_operatorLesser(const QCborValueRef* self, QCborValue* other);
QVariant* QCborValueRef_toVariant(const QCborValueRef* self);
QJsonValue* QCborValueRef_toJsonValue(const QCborValueRef* self);
struct seaqt_string QCborValueRef_toCbor(QCborValueRef* self);