seaqt/QtCore/gen_qcborvalue.nim

proc fcQCborValueConstRef_isBool(self: pointer): bool {.importc: "QCborValueConstRef_isBool".}
proc fcQCborValueConstRef_isNull(self: pointer): bool {.importc: "QCborValueConstRef_isNull".}
proc fcQCborValueConstRef_isUndefined(self: pointer): bool {.importc: "QCborValueConstRef_isUndefined".}
proc fcQCborValueConstRef_isDouble(self: pointer): bool {.importc: "QCborValueConstRef_isDouble".}
proc fcQCborValueConstRef_isDateTime(self: pointer): bool {.importc: "QCborValueConstRef_isDateTime".}
proc fcQCborValueConstRef_isUrl(self: pointer): bool {.importc: "QCborValueConstRef_isUrl".}
proc fcQCborValueConstRef_isRegularExpression(self: pointer): bool {.importc: "QCborValueConstRef_isRegularExpression".}
proc fcQCborValueConstRef_isUuid(self: pointer): bool {.importc: "QCborValueConstRef_isUuid".}
proc fcQCborValueConstRef_isInvalid(self: pointer): bool {.importc: "QCborValueConstRef_isInvalid".}
proc fcQCborValueConstRef_isContainer(self: pointer): bool {.importc: "QCborValueConstRef_isContainer".}
proc fcQCborValueConstRef_isSimpleType(self: pointer): bool {.importc: "QCborValueConstRef_isSimpleType".}
proc fcQCborValueConstRef_isSimpleTypeSt(self: pointer, st: cint): bool {.importc: "QCborValueConstRef_isSimpleType_st".}
proc fcQCborValueConstRef_toSimpleType(self: pointer): cint {.importc: "QCborValueConstRef_toSimpleType".}
proc fcQCborValueConstRef_tag(self: pointer): cint {.importc: "QCborValueConstRef_tag".}
proc fcQCborValueConstRef_taggedValue(self: pointer): pointer {.importc: "QCborValueConstRef_taggedValue".}
proc fcQCborValueConstRef_toInteger(self: pointer): clonglong {.importc: "QCborValueConstRef_toInteger".}
proc fcQCborValueConstRef_toBool(self: pointer): bool {.importc: "QCborValueConstRef_toBool".}
proc fcQCborValueConstRef_toDouble(self: pointer): float64 {.importc: "QCborValueConstRef_toDouble".}
proc fcQCborValueConstRef_toByteArray(self: pointer): struct_seaqt_string {.importc: "QCborValueConstRef_toByteArray".}
proc fcQCborValueConstRef_toString(self: pointer): struct_seaqt_string {.importc: "QCborValueConstRef_toString".}
proc fcQCborValueConstRef_toDateTime(self: pointer): pointer {.importc: "QCborValueConstRef_toDateTime".}
proc fcQCborValueConstRef_toUrl(self: pointer): pointer {.importc: "QCborValueConstRef_toUrl".}
proc fcQCborValueConstRef_toRegularExpression(self: pointer): pointer {.importc: "QCborValueConstRef_toRegularExpression".}
proc fcQCborValueConstRef_toUuid(self: pointer): pointer {.importc: "QCborValueConstRef_toUuid".}
proc fcQCborValueConstRef_toArray(self: pointer): pointer {.importc: "QCborValueConstRef_toArray".}
proc fcQCborValueConstRef_toArrayA(self: pointer, a: pointer): pointer {.importc: "QCborValueConstRef_toArray_a".}
proc fcQCborValueConstRef_toMap(self: pointer): pointer {.importc: "QCborValueConstRef_toMap".}
proc fcQCborValueConstRef_toMapM(self: pointer, m: pointer): pointer {.importc: "QCborValueConstRef_toMap_m".}
proc fcQCborValueConstRef_operatorSubscript_QString(self: pointer, key: struct_seaqt_string): pointer {.importc: "QCborValueConstRef_operatorSubscript_QString".}
proc fcQCborValueConstRef_operatorSubscriptQint64(self: pointer, key: clonglong): pointer {.importc: "QCborValueConstRef_operatorSubscript_qint64".}
proc fcQCborValueConstRef_compare(self: pointer, other: pointer): cint {.importc: "QCborValueConstRef_compare".}
proc fcQCborValueConstRef_operatorEqual(self: pointer, other: pointer): bool {.importc: "QCborValueConstRef_operatorEqual".}
proc fcQCborValueConstRef_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QCborValueConstRef_operatorNotEqual".}
proc fcQCborValueConstRef_operatorLesser(self: pointer, other: pointer): bool {.importc: "QCborValueConstRef_operatorLesser".}
proc fcQCborValueConstRef_toVariant(self: pointer): pointer {.importc: "QCborValueConstRef_toVariant".}
proc fcQCborValueConstRef_toJsonValue(self: pointer): pointer {.importc: "QCborValueConstRef_toJsonValue".}
proc fcQCborValueConstRef_toCbor(self: pointer): struct_seaqt_string {.importc: "QCborValueConstRef_toCbor".}
proc fcQCborValueConstRef_toCborWriter(self: pointer, writer: pointer): void {.importc: "QCborValueConstRef_toCbor_writer".}
proc fcQCborValueConstRef_toDiagnosticNotation(self: pointer): struct_seaqt_string {.importc: "QCborValueConstRef_toDiagnosticNotation".}
proc fcQCborValueConstRef_toSimpleTypeDefaultValue(self: pointer, defaultValue: cint): cint {.importc: "QCborValueConstRef_toSimpleType_defaultValue".}
proc fcQCborValueConstRef_tagDefaultValue(self: pointer, defaultValue: cint): cint {.importc: "QCborValueConstRef_tag_defaultValue".}
proc fcQCborValueConstRef_taggedValueDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueConstRef_taggedValue_defaultValue".}
proc fcQCborValueConstRef_toIntegerDefaultValue(self: pointer, defaultValue: clonglong): clonglong {.importc: "QCborValueConstRef_toInteger_defaultValue".}
proc fcQCborValueConstRef_toBoolDefaultValue(self: pointer, defaultValue: bool): bool {.importc: "QCborValueConstRef_toBool_defaultValue".}
proc fcQCborValueConstRef_toDoubleDefaultValue(self: pointer, defaultValue: float64): float64 {.importc: "QCborValueConstRef_toDouble_defaultValue".}
proc fcQCborValueConstRef_toByteArrayDefaultValue(self: pointer, defaultValue: struct_seaqt_string): struct_seaqt_string {.importc: "QCborValueConstRef_toByteArray_defaultValue".}
proc fcQCborValueConstRef_toStringDefaultValue(self: pointer, defaultValue: struct_seaqt_string): struct_seaqt_string {.importc: "QCborValueConstRef_toString_defaultValue".}
proc fcQCborValueConstRef_toDateTimeDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueConstRef_toDateTime_defaultValue".}
proc fcQCborValueConstRef_toUrlDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueConstRef_toUrl_defaultValue".}
proc fcQCborValueConstRef_toRegularExpressionDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueConstRef_toRegularExpression_defaultValue".}
proc fcQCborValueConstRef_toUuidDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueConstRef_toUuid_defaultValue".}
proc fcQCborValueConstRef_toCborOpt(self: pointer, opt: cint): struct_seaqt_string {.importc: "QCborValueConstRef_toCbor_opt".}
proc fcQCborValueConstRef_toCborWriterOpt(self: pointer, writer: pointer, opt: cint): void {.importc: "QCborValueConstRef_toCbor_writer_opt".}
proc fcQCborValueConstRef_toDiagnosticNotationOpt(self: pointer, opt: cint): struct_seaqt_string {.importc: "QCborValueConstRef_toDiagnosticNotation_opt".}
proc fcQCborValueConstRef_protectedbase_concrete(self: pointer): pointer {.importc: "QCborValueConstRef_protectedbase_concrete".}
proc fcQCborValueConstRef_new(fromVal: pointer): ptr cQCborValueConstRef {.importc: "QCborValueConstRef_new".}
proc fcQCborValueRef_operatorAssignOther(self: pointer, other: pointer): void {.importc: "QCborValueRef_operatorAssign_other".}
proc fcQCborValueRef_operatorAssignFrom(self: pointer, fromVal: pointer): void {.importc: "QCborValueRef_operatorAssign_from".}
proc fcQCborValueRef_operatorSubscriptQint64(self: pointer, key: clonglong): pointer {.importc: "QCborValueRef_operatorSubscript_qint64".}
proc fcQCborValueRef_operatorSubscriptCQString(self: pointer, key: struct_seaqt_string): pointer {.importc: "QCborValueRef_operatorSubscript_cQString".}
proc fcQCborValueRef_ToQCborValue(self: pointer): pointer {.importc: "QCborValueRef_ToQCborValue".}
proc fcQCborValueRef_typeX(self: pointer): cint {.importc: "QCborValueRef_type".}
proc fcQCborValueRef_isInteger(self: pointer): bool {.importc: "QCborValueRef_isInteger".}
proc fcQCborValueRef_isByteArray(self: pointer): bool {.importc: "QCborValueRef_isByteArray".}
proc fcQCborValueRef_isString(self: pointer): bool {.importc: "QCborValueRef_isString".}
proc fcQCborValueRef_isArray(self: pointer): bool {.importc: "QCborValueRef_isArray".}
proc fcQCborValueRef_isMap(self: pointer): bool {.importc: "QCborValueRef_isMap".}
proc fcQCborValueRef_isTag(self: pointer): bool {.importc: "QCborValueRef_isTag".}
proc fcQCborValueRef_isFalse(self: pointer): bool {.importc: "QCborValueRef_isFalse".}
proc fcQCborValueRef_isTrue(self: pointer): bool {.importc: "QCborValueRef_isTrue".}
proc fcQCborValueRef_isBool(self: pointer): bool {.importc: "QCborValueRef_isBool".}
proc fcQCborValueRef_isNull(self: pointer): bool {.importc: "QCborValueRef_isNull".}
proc fcQCborValueRef_isUndefined(self: pointer): bool {.importc: "QCborValueRef_isUndefined".}
proc fcQCborValueRef_isDouble(self: pointer): bool {.importc: "QCborValueRef_isDouble".}
proc fcQCborValueRef_isDateTime(self: pointer): bool {.importc: "QCborValueRef_isDateTime".}
proc fcQCborValueRef_isUrl(self: pointer): bool {.importc: "QCborValueRef_isUrl".}
proc fcQCborValueRef_isRegularExpression(self: pointer): bool {.importc: "QCborValueRef_isRegularExpression".}
proc fcQCborValueRef_isUuid(self: pointer): bool {.importc: "QCborValueRef_isUuid".}
proc fcQCborValueRef_isInvalid(self: pointer): bool {.importc: "QCborValueRef_isInvalid".}
proc fcQCborValueRef_isContainer(self: pointer): bool {.importc: "QCborValueRef_isContainer".}
proc fcQCborValueRef_isSimpleType(self: pointer): bool {.importc: "QCborValueRef_isSimpleType".}
proc fcQCborValueRef_isSimpleTypeSt(self: pointer, st: cint): bool {.importc: "QCborValueRef_isSimpleType_st".}
proc fcQCborValueRef_toSimpleType(self: pointer): cint {.importc: "QCborValueRef_toSimpleType".}
proc fcQCborValueRef_tag(self: pointer): cint {.importc: "QCborValueRef_tag".}
proc fcQCborValueRef_taggedValue(self: pointer): pointer {.importc: "QCborValueRef_taggedValue".}
proc fcQCborValueRef_toInteger(self: pointer): clonglong {.importc: "QCborValueRef_toInteger".}
proc fcQCborValueRef_toBool(self: pointer): bool {.importc: "QCborValueRef_toBool".}
proc fcQCborValueRef_toDouble(self: pointer): float64 {.importc: "QCborValueRef_toDouble".}
proc fcQCborValueRef_toByteArray(self: pointer): struct_seaqt_string {.importc: "QCborValueRef_toByteArray".}
proc fcQCborValueRef_toString(self: pointer): struct_seaqt_string {.importc: "QCborValueRef_toString".}
proc fcQCborValueRef_toDateTime(self: pointer): pointer {.importc: "QCborValueRef_toDateTime".}
proc fcQCborValueRef_toUrl(self: pointer): pointer {.importc: "QCborValueRef_toUrl".}
proc fcQCborValueRef_toRegularExpression(self: pointer): pointer {.importc: "QCborValueRef_toRegularExpression".}
proc fcQCborValueRef_toUuid(self: pointer): pointer {.importc: "QCborValueRef_toUuid".}
proc fcQCborValueRef_toArray(self: pointer): pointer {.importc: "QCborValueRef_toArray".}
proc fcQCborValueRef_toArrayA(self: pointer, a: pointer): pointer {.importc: "QCborValueRef_toArray_a".}
proc fcQCborValueRef_toMap(self: pointer): pointer {.importc: "QCborValueRef_toMap".}
proc fcQCborValueRef_toMapM(self: pointer, m: pointer): pointer {.importc: "QCborValueRef_toMap_m".}
proc fcQCborValueRef_operatorSubscriptConstCQString(self: pointer, key: struct_seaqt_string): pointer {.importc: "QCborValueRef_operatorSubscript_const_cQString".}
proc fcQCborValueRef_operatorSubscriptConstQint64(self: pointer, key: clonglong): pointer {.importc: "QCborValueRef_operatorSubscript_const_qint64".}
proc fcQCborValueRef_compare(self: pointer, other: pointer): cint {.importc: "QCborValueRef_compare".}
proc fcQCborValueRef_operatorEqual(self: pointer, other: pointer): bool {.importc: "QCborValueRef_operatorEqual".}
proc fcQCborValueRef_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QCborValueRef_operatorNotEqual".}
proc fcQCborValueRef_operatorLesser(self: pointer, other: pointer): bool {.importc: "QCborValueRef_operatorLesser".}
proc fcQCborValueRef_toVariant(self: pointer): pointer {.importc: "QCborValueRef_toVariant".}
proc fcQCborValueRef_toJsonValue(self: pointer): pointer {.importc: "QCborValueRef_toJsonValue".}
proc fcQCborValueRef_toCbor(self: pointer): struct_seaqt_string {.importc: "QCborValueRef_toCbor".}
